// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.editions;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "WsEditions";
option optimize_for = SPEED;

// GET api/editions/status
// POST api/editions/apply_license
message StatusResponse {
  optional string currentEditionKey = 1;
  optional InstallationStatus installationStatus = 2;
  optional string nextEditionKey = 3;
}

enum InstallationStatus {
  NONE = 0;
  AUTOMATIC_IN_PROGRESS = 1;
  AUTOMATIC_READY = 2;
  AUTOMATIC_FAILED = 3;
  MANUAL_IN_PROGRESS = 4;
}
